@@ -22,6 +22,9 @@ Version 1.5.7+svn:
       a player name, replacing the old whisper dialog
     * Automatically select the game the selected player is in
 
+  * Miscellaneous and bugfixes
+    * Fixed a crash when more than one add-on is being updated.
+
 Version 1.5.7:
   * Campaigns
     * Eastern Invasion
